--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <div id="info-icon" style="display:inline-block;">i</div>
       <div id="info-text">The suitability index is the result of factors in which weighting are applied.</div>
     </button>
-    <button id="reset-btn" type="button">Reset</button>
+    <button id="reset-btn" type="button">Reset weightings to default</button>
     <div class="control-row">
       <label class="inline-checkbox">
         <input type="checkbox" id="toggle-grid" class="layer-toggle" title="Show grid layer" checked />
@@ -143,7 +143,7 @@
         
 </div>
     </div>
-    <label id="transparency-label" for="transparency-slider">Grid transparency:
+    <label id="transparency-label" for="transparency-slider">Grid transparency
       <input type="range" min="0" max="1" step="0.01" id="transparency-slider" value="0.5" />
       <span id="percent-transparency">50%</span>
     </label>
@@ -514,6 +514,7 @@ deleteBtn.addTo(map);
           `Selected: <b>${selected.length}</b> gridcells<br>Area: <b>${(totalAreaSqMeters/1e6).toFixed(1)}</b> km²<br>Avg. score: <b>${(totalScore/selected.length).toFixed(2)}</b>`;
         controlBox.classList.add('show-stats');
       }
+    });
 
     function clearSelectionAndStats() {
       drawnItems.clearLayers();
