Update index.html - updatedrawbuttons

--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@ const drawControl = new L.Control.Draw({
   position: "bottomright",
   draw: {
     polygon: true,
-    rectangle: true,
+    rectangle: false,
     polyline: false,
     circle: false,
     marker: true,
