--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <button id="update-btn" type="button" style="position:relative;">
       Update suitability index
       <div id="info-icon" style="display:inline-block;">i</div>
-      <div id="info-text">The suitability index is the result of factors in which weighting are applied. Normalisation sums up the total weightings to 100%</div>
+      <div id="info-text">The suitability index is the result of factors in which weighting are applied. Normalisation sums up to 100%</div>
     </button>
     <button id="reset-btn" type="button">Reset weighting to default</button>
     <div class="control-row">
@@ -361,14 +361,6 @@ document.getElementById('transparency-slider').addEventListener('input', functio
     updatePercentDisplay('weight-pop','percent-pop');
     updatePercentDisplay('transparency-slider','percent-transparency');
 
-    window.clearSelectionAndStats = function() {
-  drawnItems.clearLayers();
-  selectedFeatures = [];
-  document.getElementById('selection-summary').innerHTML = '';
-  controlBox.classList.remove('show-stats');
-  if(layer_group) layer_group.eachLayer(featureLayer => featureLayer.setStyle(styleFeature(featureLayer.feature)));
-};
-    
     function updateScores() {
       let w_ov = parseFloat(document.getElementById('weight-ov').value) || 0;
       let w_fit = parseFloat(document.getElementById('weight-fitness').value) || 0;
@@ -475,7 +467,7 @@ const drawControl = new L.Control.Draw({
     rectangle: false,
     polyline: false,
     circle: false,
-    marker: true,
+    marker: false,
     circlemarker: false
   }
 });
@@ -505,101 +497,43 @@ deleteBtn.onAdd = function () {
 };
 deleteBtn.addTo(map);
 
-map.on(L.Draw.Event.CREATED, function(event) {
+map.on(L.Draw.Event.CREATED, function (event) {
   const layer = event.layer;
-  const layerType = event.layerType;
-
-  const isMultiSelect = event.originalEvent && (event.originalEvent.ctrlKey || event.originalEvent.shiftKey);
-  if (!isMultiSelect) {
-    drawnItems.clearLayers();
-    selectedFeatures = [];
-
-    // Reset all styles
-    if (layer_group) {
-      layer_group.eachLayer(l => l.setStyle(styleFeature(l.feature)));
-    }
-  }
-
+  drawnItems.clearLayers();
   drawnItems.addLayer(layer);
 
   const drawnGeoJSON = layer.toGeoJSON();
+  const selected = [];
+  let totalScore = 0, totalAreaSqMeters = 0;
 
   if (layer_group) {
-    layer_group.eachLayer(function(featureLayer) {
+    layer_group.eachLayer(function (featureLayer) {
       const feature = featureLayer.toGeoJSON();
-      let intersects = false;
-
-      if (layerType === 'marker') {
-        intersects = turf.booleanPointInPolygon(drawnGeoJSON, feature);
+      if (turf.booleanIntersects(drawnGeoJSON, feature)) {
+        selected.push(feature);
+        featureLayer.setStyle({ color: 'red', weight: 2, fillOpacity: 0.8 });
+        totalScore += feature.properties.MCA_score || 0;
+        totalAreaSqMeters += turf.area(feature);
       } else {
-        intersects = turf.booleanIntersects(drawnGeoJSON, feature);
-      }
-
-      if (intersects) {
-        const id = feature.properties.id;
-        const index = selectedFeatures.findIndex(f => f.properties.id === id);
-
-        if (isMultiSelect) {
-          if (index !== -1) {
-            // Already selected → unselect
-            selectedFeatures.splice(index, 1);
-            featureLayer.setStyle(styleFeature(featureLayer.feature));
-          } else {
-            // Not selected → add
-            selectedFeatures.push(feature);
-            featureLayer.setStyle({ color: 'red', weight: 2, fillOpacity: 0.8 });
-          }
-        } else {
-          // Single selection
-          selectedFeatures = [feature];
-          featureLayer.setStyle({ color: 'red', weight: 2, fillOpacity: 0.8 });
-        }
+        featureLayer.setStyle(styleFeature(featureLayer.feature));
       }
     });
   }
-
-  // Only show popup if something is selected
-  if (selectedFeatures.length) {
-    let totalScore = 0, totalAreaSqMeters = 0;
-    selectedFeatures.forEach(f => {
-      totalScore += f.properties.MCA_score || 0;
-      totalAreaSqMeters += turf.area(f);
-    });
-
-    const avgScore = (totalScore / selectedFeatures.length).toFixed(2);
-    const areaKm2 = (totalAreaSqMeters / 1e6).toFixed(1);
-    const count = selectedFeatures.length;
-
-    const popupContent = `
-      <div id="popup-stats" style="font-family: Arial; font-size: 14px;">
-        <strong>Selected:</strong> ${count} gridcells<br/>
-        <strong>Area:</strong> ${areaKm2} km²<br/>
-        <strong>Avg. score:</strong> ${avgScore}<br/><br/>
-        <button id="popup-export-json-btn" style="margin-right:5px;">Export GeoJSON</button>
-        <button id="popup-export-csv-btn">Export CSV</button>
-      </div>
-    `;
-
-    const popupLatLng = (layerType === 'marker')
-      ? layer.getLatLng()
-      : layer.getBounds().getCenter();
-
-    L.popup()
-      .setLatLng(popupLatLng)
-      .setContent(popupContent)
-      .openOn(map);
-
-    map.once('popupopen', function () {
-      document.getElementById('popup-export-json-btn').onclick = function () {
-        exportSelectedAsJSON(selectedFeatures);
-      };
-      document.getElementById('popup-export-csv-btn').onclick = function () {
-        exportSelectedAsCSV(selectedFeatures);
-      };
-    });
+  selectedFeatures = selected;
+  if(selected.length){
+    document.getElementById('selection-summary').innerHTML =
+      `Selected: <b>${selected.length}</b> gridcells<br>Area: <b>${(totalAreaSqMeters/1e6).toFixed(1)}</b> km²<br>Avg. score: <b>${(totalScore/selected.length).toFixed(2)}</b>`;
+    controlBox.classList.add('show-stats');
   }
 });
 
+function clearSelectionAndStats() {
+  drawnItems.clearLayers();
+  selectedFeatures = [];
+  document.getElementById('selection-summary').innerHTML = '';
+  controlBox.classList.remove('show-stats');
+  if(layer_group) layer_group.eachLayer(featureLayer => featureLayer.setStyle(styleFeature(featureLayer.feature)));
+}
     
     // EXPORT FUNCTIES
     function exportSelectedAsCSV(selected) {
