--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-html
 <!doctype html>
 <html lang="nl">
 <head>
@@ -10,6 +9,7 @@ html
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-draw@1.0.4/dist/leaflet.draw.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder@2.4.0/dist/Control.Geocoder.css" />
+
 
   <style>
     html, body {
@@ -222,9 +222,9 @@ html
     </label>
 
     <div class="search-container">
-      <label for="address-search-input">Search address:</label>
+      <label for="address-search-input">Search address (within Utrecht):</label>
       <div class="search-input-group">
-        <input type="text" id="address-search-input" placeholder="e.g., Domplein 9, Utrecht">
+        <input type="text" id="address-search-input" placeholder="e.g., Domplein 9">
         <button id="search-address-btn">Search</button>
       </div>
       <div id="search-results"></div>
@@ -403,24 +403,34 @@ html
     });
     
     // OVERLAY/BASELAYER CONTROL
-    const satelliteLayer = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {maxZoom:19, attribution:'Tiles © Esri'});
+    const satelliteLayer = L.tileLayer('https://server.arcgisonoline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {maxZoom:19, attribution:'Tiles © Esri'});
     L.control.layers(null, { "Satellite": satelliteLayer }, { position:'topright' }).addTo(map);
 
     // GEMEENTEKAART
-    let gemeentekaartLayer = null; // Store the gemeentekaart data globally
-    fetch('https://raw.githubusercontent.com/geosenso92/fitness-locator-map/main/data/gemkaart24.json').then(r=>r.json()).then(data=>{
-      gemeentekaartLayer = L.geoJSON(data, {
-        filter: f=>f.properties.gemeentenaam!=="Utrecht",
-        style: { color: "#555", weight: 1, fillColor: "#f7f7f7", fillOpacity: 0.3 },
-        onEachFeature: (f,layer)=>{
-          layer.bindTooltip(f.properties.gemeentenaam, {sticky:true});
-          layer.on({
-            mouseover: e=>{ e.target.setStyle({weight:2, color:'#000', fillOpacity:0.5}); e.target.openTooltip(); },
-            mouseout: e=>{ layer.setStyle({ color: "#555", weight: 1, fillColor: "#f7f7f7", fillOpacity: 0.3 }); e.target.closeTooltip(); }
-          });
+    let gemeentekaartLayer = null; 
+    let utrechtPolygon = null; // Variable to store the Utrecht polygon for search filtering
+
+    fetch('https://raw.githubusercontent.com/geosenso92/fitness-locator-map/main/data/gemkaart24.json')
+      .then(r => r.json())
+      .then(data => {
+        // Find and store the Utrecht polygon separately
+        const utrechtFeature = data.features.find(f => f.properties.gemeentenaam === "Utrecht");
+        if (utrechtFeature) {
+            utrechtPolygon = utrechtFeature;
         }
-      }).addTo(map);
-    });
+
+        // Add ALL municipalities to the displayed layer
+        gemeentekaartLayer = L.geoJSON(data, {
+          style: { color: "#555", weight: 1, fillColor: "#f7f7f7", fillOpacity: 0.3 },
+          onEachFeature: (f, layer) => {
+            layer.bindTooltip(f.properties.gemeentenaam, { sticky: true });
+            layer.on({
+              mouseover: e => { e.target.setStyle({ weight: 2, color: '#000', fillOpacity: 0.5 }); e.target.openTooltip(); },
+              mouseout: e => { layer.setStyle({ color: "#555", weight: 1, fillColor: "#f7f7f7", fillOpacity: 0.3 }); e.target.closeTooltip(); }
+            });
+          }
+        }).addTo(map);
+      });
 
     // SLIDERS EN BUTTONS
     function updatePercentDisplay(idRange, idPercent) {
@@ -695,6 +705,11 @@ html
         return;
       }
 
+      if (!utrechtPolygon) {
+        searchResultsDiv.innerHTML = '<p>Utrecht municipality data not loaded yet. Please try again in a moment.</p>';
+        return;
+      }
+
       searchResultsDiv.innerHTML = '<p>Searching...</p>';
       
       // Clear previous search marker
@@ -704,7 +719,10 @@ html
       }
 
       try {
-        const response = await fetch(`https://nominatim.openstreetmap.org/search?q=${encodeURIComponent(query)}&format=json&limit=5`);
+        // Appending "Utrecht, Netherlands" to the query for better Nominatim results
+        // This hint helps Nominatim, but the turf.booleanPointInPolygon check is the definitive filter.
+        const nominatimQuery = `${query}, Utrecht, Netherlands`; 
+        const response = await fetch(`https://nominatim.openstreetmap.org/search?q=${encodeURIComponent(nominatimQuery)}&format=json&limit=5`);
         const data = await response.json();
 
         if (data.length === 0) {
@@ -712,28 +730,23 @@ html
           return;
         }
 
-        const resultsInBounds = [];
+        const resultsInUtrecht = [];
         for (const result of data) {
           const lat = parseFloat(result.lat);
           const lon = parseFloat(result.lon);
           const point = turf.point([lon, lat]);
 
-          // Check if the point is within any of the gemeentekaart polygons
-          if (gemeentekaartLayer) {
-            gemeentekaartLayer.eachLayer(function(layer) {
-              if (turf.booleanPointInPolygon(point, layer.feature)) {
-                resultsInBounds.push({
-                  name: result.display_name,
-                  latlng: [lat, lon],
-                  bounds: result.boundingbox // Bounding box from Nominatim
-                });
-                return false; // Break out of eachLayer if found
-              }
+          // This is the crucial check: Is the geocoded point *within* the stored Utrecht polygon?
+          if (turf.booleanPointInPolygon(point, utrechtPolygon)) {
+            resultsInUtrecht.push({
+              name: result.display_name,
+              latlng: [lat, lon],
+              bounds: result.boundingbox // Bounding box from Nominatim
             });
           }
         }
 
-        displaySearchResults(resultsInBounds);
+        displaySearchResults(resultsInUtrecht);
 
       } catch (error) {
         console.error('Error during geocoding:', error);
@@ -744,7 +757,7 @@ html
     function displaySearchResults(results) {
       searchResultsDiv.innerHTML = '';
       if (results.length === 0) {
-        searchResultsDiv.innerHTML = '<p>No addresses found within the map boundaries.</p>';
+        searchResultsDiv.innerHTML = '<p>No addresses found within Utrecht municipality.</p>';
         return;
       }
 
@@ -774,7 +787,7 @@ html
       });
       searchResultsDiv.prepend(document.createElement('hr')); // Separator
       const header = document.createElement('p');
-      header.innerHTML = `<strong>Found ${results.length} result(s) within bounds:</strong>`;
+      header.innerHTML = `<strong>Found ${results.length} result(s) within Utrecht:</strong>`;
       searchResultsDiv.prepend(header);
     }
 
