Update index.html - Zoning

--- a/index.html
+++ b/index.html
@@ -214,7 +214,11 @@
           Buildings layer
         </label>
 
-        <label><input type="checkbox" id="toggle-zoning"> Toon bestemmingsplannen</label>
+             <div class="control-row">
+        <label class="inline-checkbox">
+          <input type="checkbox" id="toggle-zoning" class="layer-toggle" title="Show zoning layer" />
+          Zoning layer
+        </label>
         
       </div>
     </div>
