Update index.html - Zoningcorrect

--- a/index.html
+++ b/index.html
@@ -214,11 +214,7 @@
           Buildings layer
         </label>
 
-             <div class="control-row">
-        <label class="inline-checkbox">
-          <input type="checkbox" id="toggle-zoning" class="layer-toggle" title="Show zoning layer" />
-          Zoning layer
-        </label>
+       <label><input type="checkbox" id="toggle-zoning">Show zoning layer</label>
         
       </div>
     </div>
