Update index.html - update layernames controlbox

--- a/index.html
+++ b/index.html
@@ -206,21 +206,21 @@
     <div class="control-row">
       <label class="inline-checkbox">
         <input type="checkbox" id="toggle-grid" class="layer-toggle" title="Show grid layer" checked />
-        Suitability layer
+        Suitability grid
       </label>
     </div>
     
     <div class="control-row">
       <label class="inline-checkbox">
         <input type="checkbox" id="toggle-buildings" class="layer-toggle" title="Show buildings layer" />
-        Buildings layer
+        Buildings
       </label>
     </div>
 
     <div class="control-row">
       <label class="inline-checkbox">
         <input type="checkbox" id="toggle-zoning" class="layer-toggle" title="Show zoning layer" />
-        Zoning layer
+        Zoning
       </label>
     </div>
 
