Update index.html - Update buttoncolour

--- a/index.html
+++ b/index.html
@@ -211,9 +211,11 @@
       <div id="info-icon" style="display:inline-block;">i</div>
       <div id="info-text">The suitability index is the result of factors in which weighting are applied. Normalisation sums up to 100%</div>
     </button>
+    <button id="ai-suggest-btn" type="button" style="margin-top: 6px; width: 100%; padding: 7px; font-size: 12px; background: #2C3E83; color: white; border: none; border-radius: 4px; cursor: pointer;">
+  🤖 AI Suggests Optimal Area
+</button>
     <button id="reset-btn" type="button">Reset weighting to default</button>
     
-<button id="ai-suggest-btn">🤖 AI Suggests Optimal Area</button>
     
     <div class="control-row">
       <label class="inline-checkbox">
